--- a/readme.Rmd
+++ b/readme.Rmd
@@ -60,7 +60,7 @@ decayfits <- read_csv("derived_data/decayfits.csv")
 indx <- unique(stemSamples[,c("code","Binomial","size")])
 decayfits %>%
   left_join(indx) -> decayfits
-code.respVars <- list("k","t60","ne.r2", "alpha","beta","w.t60","w.r2") # weibull params: alpha = shape param, beta = scale param
+code.respVars <- list("k","t50","ne.r2", "alpha","beta","w.t50","w.r2") # weibull params: alpha = shape param, beta = scale param
 
 #---------------------------#
 # main figures and tables
@@ -76,7 +76,7 @@ makefig__pmr_byStem(pmr_byStem) # output/figures/maintext/pmr_byStem.pdf
 # supplementary figures and tables
 
 #Fig S1
-makefig__compare_t60(decayfits) # output/figures/supplementary/compare_t60.pdf
+makefig__compare_t50(decayfits) # output/figures/supplementary/compare_t50.pdf
 
 #Fig S2
 makefig__compare_aic(decayfits) # output/figures/supplementary/compare_aic.pdf
@@ -109,10 +109,12 @@ traits.stem <- trait.means_byStem(stemSamples) # averaged by codeStem
 # main figures and tables
 
 #Fig 3
-makefig__traits_explain_decayParams(decayfits, traits.code) # output/figures/maintext/traits_explain_decayparams.pdf
+makefig__traits_explain_decayParams(decayfits, traits.code, 
+                                    code.respVars, use.cache = T) # output/figures/maintext/traits_explain_decayparams.pdf
 
 #Fig 4
-makefig__traits_explain_pmr(traits.stem, traits.code, pmr_byStem) # output/figures/maintext/traits_explain_pmr.pdf
+makefig__traits_explain_pmr(traits.stem, traits.code, pmr_byStem, 
+                            stem.respVars, use.cache = T) # output/figures/maintext/traits_explain_pmr.pdf
 
 #---------------------------#
 # supplementary figures and tables
@@ -121,7 +123,8 @@ makefig__traits_explain_pmr(traits.stem, traits.code, pmr_byStem) # output/figur
 makefig__variation_densityNbarkthick(traits.stem, traits.code, pmr_byStem) # output/figures/supplementary/variation_densityNbarkthick.pdf
 
 #Table S1
-cox.df <- doAnalysis_variation_densityNbarkthick(traits.stem, traits.code, pmr_byStem); write.csv(cox.df, file="output/tables/supplementary/smallsize_codeVstem_cox.csv")
+cox.df <- doAnalysis_variation_densityNbarkthick(traits.stem, traits.code, pmr_byStem, stem.respVars) 
+write.csv(cox.df, file="output/tables/supplementary/smallsize_codeVstem_cox.csv")
 
 ```
 
@@ -134,9 +137,9 @@ cox.df <- doAnalysis_variation_densityNbarkthick(traits.stem, traits.code, pmr_b
 #data
 
 # wood trait residuals (see `woodTraits_explainDecay.Rmd')
-result.traitsDecay <- doAnalysis_traits_explain_decayParams(decayfits, traits.code)
+result.traitsDecay <- doAnalysis_traits_explain_decayParams(decayfits, traits.code, code.respVars, use.cache = T)
 traitResiduals.code <- result.traitsDecay$traitResiduals.code
-result.traitsPMR <- doAnalysis_traits_explain_pmr(pmr_byStem, traits.code, traits.stem)
+result.traitsPMR <- doAnalysis_traits_explain_pmr(pmr_byStem, traits.code, traits.stem, stem.respVars, use.cache = T)
 traitResiduals.stem <- result.traitsPMR$traitResiduals.stem
 
 #microbes
@@ -152,33 +155,35 @@ seqSamples <- microb.data$seqSamples
 # supplementary figures and tables
 
 #Fig S4
-plot_sampleEffortCurves(comm.otu) # output/figures/supplementary/sampleEffortCurve.pdf; #this takes a while... uncomment if the data changes
+#plot_sampleEffortCurves(comm.otu) # output/figures/supplementary/sampleEffortCurve.pdf; #this takes a while... uncomment if the data changes
 
 #Fig S5
-makefig__wapls_score_time37(cvfit.results.stem, taxAndFunguild) # output/figures/supplementary/wapls_score_time37.pdf
-makefig__wapls_score_time37_otuCats(cvfit.results.stem, taxAndFunguild) # output/figures/supplementary/wapls_score_time37_otuCats.pdf
-makefig__wapls_score_time37_boral(cvfit.results.stem, taxAndFunguild) # output/figures/supplementary/wapls_score_time37_boral.pdf
+#FIX THESE FXNS
+#makefig__wapls_score_time37(cvfit.results.stem, taxAndFunguild) # output/figures/supplementary/wapls_score_time37.pdf
+#makefig__wapls_score_time37_otuCats(cvfit.results.stem, taxAndFunguild) # output/figures/supplementary/wapls_score_time37_otuCats.pdf
+#makefig__wapls_score_time37_boral(cvfit.results.stem, taxAndFunguild) # output/figures/supplementary/wapls_score_time37_boral.pdf
 #otucats <- maketab__wapls_score_time37_otuCats(cvfit.results.stem, taxAndFunguild)
 #write.csv(otucats, file = "output/tables/supplementary/wapls_score_time37_otuCats.csv")
 
 #Fig S6
-makefigs__endoComp_woodTraits(comm.otu, seqSamples, traits.code) # output/figures/supplementary/dbRDA_code.pdf
-tab.list <- maketabs__endoComp_woodTraits(comm.otu, seqSamples, traits.code)
+makefigs__endoComp_woodTraits(comm.otu, seqSamples, traits.code, use.cache = T) # output/figures/supplementary/dbRDA_code.pdf
+tab.list <- maketabs__endoComp_woodTraits(comm.otu, seqSamples, traits.code, use.cache = T)
 write.csv(tab.list$an.nt.code, file="output/tables/supplementary/dbRDAanova_nt_code.csv")
 write.csv(tab.list$an.t.code, file="output/tables/supplementary/dbRDAanova_t_code.csv")
-makefigs__endoComp_woodTraits.stem(comm.otu, traits.code, traits.stem) # output/figures/supplementary/dbRDA_stem.pdf
-tab.list <- maketabs__endoComp_woodTraits.stem(comm.otu, traits.code, traits.stem)
+makefigs__endoComp_woodTraits.stem(comm.otu, traits.code, traits.stem, use.cache = T) # output/figures/supplementary/dbRDA_stem.pdf
+tab.list <- maketabs__endoComp_woodTraits.stem(comm.otu, traits.code, traits.stem, use.cache = T)
 write.csv(tab.list$an.nt.stem, file="output/tables/supplementary/dbRDAanova_nt_stem.csv")
 write.csv(tab.list$an.t.stem, file="output/tables/supplementary/dbRDAanova_t_stem.csv")
 
 #Table S2
-cvfit.results.code <- doAnalysis_endoComp_explainDecay(comm.otu, seqSamples, decayfits, code.respVars)
+cvfit.results.code <- doAnalysis_endoComp_explainDecay(comm.otu, seqSamples, decayfits, code.respVars, use.cache = T)
 cvfit.results.stem <- doAnalysis_endoComp_explainPMR(comm.otu, pmr_byStem, stem.respVars)
 commTab <- maketab_endoComp_explain(cvfit.results.code, cvfit.results.stem, code.respVars, stem.respVars)
 write.csv(commTab, file="output/tables/supplementary/commcompsummary.csv")
 
 #Table S3
-cvfit.results.code <- doAnalysis_endoComp_explainDecayResids(comm.otu, seqSamples, decayfits, code.respVars, traitResiduals.code)
+cvfit.results.code <- doAnalysis_endoComp_explainDecayResids(comm.otu, seqSamples, decayfits, 
+                                                             code.respVars, traitResiduals.code, use.cache = T)
 cvfit.results.stem <- doAnalysis_endoComp_explainPMRResids(comm.otu, pmr_byStem, stem.respVars, traitResiduals.stem)
 commTab <- maketab_endoComp_explain(cvfit.results.code, cvfit.results.stem, code.respVars, stem.respVars)
 write.csv(commTab, file="output/tables/supplementary/commcompsummary_traitresid.csv")
@@ -275,6 +280,20 @@ matonly.s <- scale(as.matrix(matonly[,-1]))
 
 # plot correlations
 corrplot(cor(matonly.s), type = "lower")
+
+```
+
+Kick out traits that are highly correlated
+- C and perc.Total.lignin are highly positive correlated (0.81); keep perc.Total.lignin
+- Glucose+Xylose and perc.Total.lignin are highly negatively correlated (-.89, -.73); keep perc.Total.lignin.
+```{r}
+#update
+traits.stem.sel %>%
+  select(-c(Glucose, Xylose, C)) -> traits.stem.sel
+traits.stem.sel %>%
+  select(-c(species, size, code, unique, Stem)) -> matonly
+matonly.s <- scale(as.matrix(matonly[,-1]))
+
 ```
 
 Check out samples in trait space
@@ -299,8 +318,8 @@ plot_12 <- ggplot(data=datapc, aes(x=v1, y=v2, label=varnames)) +
   geom_point(mapping=aes(x=PC1, y=PC2, 
                         color = species), data=df, inherit.aes = FALSE) +
   theme_bw() + xlab("PC1") + ylab("PC2")
-#plot_12
-#ggsave(plot_12, filename = "output/stem_traitord.pdf")
+plot_12
+ggsave(plot_12, filename = "output/stem_traitord.pdf")
 # for some reason this plot knit with more extra data points? it seems to work fine in ggsave
 
 summary(pca)
@@ -321,8 +340,8 @@ Do wood C fractions explain decay?
 #merge traits and response variables into 1 df
 decayfits %>%
   select(code, species, size, 
-         ne.r2, k, t70, 
-         w.r2, alpha, beta, w.t70) %>%
+         ne.r2, k, t50, 
+         w.r2, alpha, beta, w.t50) %>%
   left_join(traits.code) %>% 
   filter(!is.na(P)) %>%
   filter(!is.na(waterperc)) -> decayfits.traits
@@ -332,8 +351,8 @@ decayfits.traits %>%
   filter(!is.na(Arabinose)) -> decayfits.traits
 
 #set up full models
-respVars <- list("k","t70","ne.r2", "alpha","beta","w.t70","w.r2")
-rhs <- "waterperc + N + Arabinose + Galactose + Glucose + Mannose + perc.Total.lignin + Rhamnose + Xylose" # got rid of size because only looking at large stems
+respVars <- list("k","t50","ne.r2", "alpha","beta","w.t50","w.r2")
+rhs <- "waterperc + N + Arabinose + Galactose + Mannose + perc.Total.lignin + Rhamnose" # got rid of size because only looking at large stems
 mod.full.list<-lapply(respVars, ModelFit_manyYs, rhs, curr.data=decayfits.traits) # summaryTable_fxns.R
 
 #do stepwise model selection #uncomment if data changes
@@ -347,6 +366,7 @@ names(mod.select.list) <- respVars
 #plot
 sum.list<-lapply(mod.select.list, summary)
 coefs.df<-PullLmCoefs(sum.list, unlist(respVars))
+fitstat.df
 fitstat.df<-PullLmFitStats(sum.list, unlist(respVars))
 fitstat.df %>%
   gather(key = "respvar", value = "value", -c(term)) %>%
@@ -355,7 +375,7 @@ fitstat.df %>%
   rename('r.squared'=value) -> r2.df
 coefs.df %>%
   left_join(r2.df) %>%
-  filter(respvar %in% c("alpha","beta","w.t70","w.r2")) -> coefs.df
+  filter(respvar %in% c("alpha","beta","w.t50","w.r2")) -> coefs.df
 
 ggplot(coefs.df, aes(x = respvar, y = term, fill = r.squared)) +
   geom_tile() + geom_text(aes(label = round(est, digits = 2))) +
@@ -364,10 +384,10 @@ ggplot(coefs.df, aes(x = respvar, y = term, fill = r.squared)) +
 
 ```
 
-- alpha: Codes that decay quickly have more Rhamnose
-- beta: Codes with s-shaped trajectories have low N, Mannose, and Glactose
-- w.r2: Codes with better model fits have more Rhamnose
-- w.t70: Codes with longer "half lives" have more Rhamnose and less N
+- alpha: Codes that decay quickly (at first) have more water and Rhamnose
+- beta: Codes with s-shaped trajectories have less water, more Rhamnose, larger fraction of total lignin
+- w.r2: Codes with better model fits have more water and less lignin
+- w.t50: Codes with longer half lives have more water, more lignin, more Rhamnose
 
 (by stem)
 ```{r}
@@ -382,7 +402,7 @@ datasets<-lapply(respVars, function(x) {
 names(datasets)<-respVars
 
 #set up full models
-rhs <- "waterperc + N + Arabinose + Galactose + Glucose + Mannose + perc.Total.lignin + Rhamnose + Xylose"
+rhs <- "waterperc + N + Arabinose + Galactose + Mannose + perc.Total.lignin + Rhamnose"
 lhs <- "curr.pmr"
 mod.full.list<-lapply(datasets, function(x) {
   result<-ModelFit_manyYs(y=lhs, rhs=rhs, curr.data=x)
@@ -409,7 +429,7 @@ coefs.df %>%
   left_join(r2.df) -> coefs.df
 
 coefs.df$respvar<- factor(coefs.df$respvar, levels = c("time7","time13","time25","time37","time59"))
-
+coefs.df
 ggplot(coefs.df, aes(x = respvar, y = term, fill = r.squared)) +
   geom_tile() + geom_text(aes(label = round(est, digits = 2))) +
   xlab("Response variable") + ylab("Wood trait") +
@@ -417,7 +437,106 @@ ggplot(coefs.df, aes(x = respvar, y = term, fill = r.squared)) +
 
 ```
 
-- Glucose and waterperc are important for explaining pmr at each time point. Stems with low glucose and waterperc tend to have more mass remaining.
-- High Rhamnose and low N are associated with more mass remaining after 25 months
+- waterperc is important for explaining pmr at each time point. Stems with low waterperc tend to have more mass remaining.
+- Low Rhamnose, Mannose and Arabinose correspond with more mass remaining early-on
+- High Rhamnose and lignin correspond with more mass remaining at later timepoints
+
+
+Visualize the relationship between wood C fractions and endophyte communities
+```{r}
+
+#microbes
+microb.data <- load_MicrobeCollection(stemSamples)
+taxAndFunguild <- microb.data$taxAndFunguild
+comm.otu <- microb.data$comm.otu
+seqSamples <- microb.data$seqSamples
+
+cfract.load<- load_Cfract()
+mat.otu <- sub.comm.otu <- comm.otu[row.names(comm.otu) %in% cfract.load$unique,]
+dim(mat.otu)
+
+xVars <- cfract.load
+xVars %>%
+  select(-c(Total, unique, Stem, size)) -> envVars
+dim(envVars)  
+
+# transform otu tab
+mat.otu.t<-decostand(mat.otu, 'hellinger')
+  
+# unconstrained mod
+mod.obj <- capscale(mat.otu.t ~ 1, data = envVars, distance='bray')
+  
+  # do envfit
+  envfit.obj <- envfit(mod.obj, envVars)
+  
+  # collect site scores from mod.obj
+  scrs <- as.data.frame(scores(mod.obj, display = "sites"))
+  scrs
+  scrs <- cbind(scrs, seq_sampName = row.names(scrs))
+  scrs %>%
+    left_join(seqSamples) -> scrs
+  
+  # collect vector scores from envfit.obj
+  spp.scrs <- as.data.frame(scores(envfit.obj, display = "vectors"))
+  spp.scrs <- cbind(spp.scrs, Species = rownames(spp.scrs), pval = envfit.obj$vectors$pvals)
+  
+  # plot
+  mult <- 2 #multiplier for the arrows and text for envfit
+  mult.text <- 2.3
+  p <- ggplot(scrs) +
+    geom_text(mapping = aes(x = MDS1, y = MDS2, label = code,
+                             color = species), size = 3) +
+    coord_fixed() + ## need aspect ratio of 1!
+    geom_segment(data = spp.scrs,
+                 aes(x = 0, xend = mult*MDS1, y = 0, yend = mult*MDS2),
+                 arrow = arrow(length = unit(0.2, "cm")), colour = 1) +
+    geom_text(data = spp.scrs, 
+              aes(x = mult.text*MDS1, y = mult.text*MDS2, 
+                  label = Species), size = 4, fontface = "bold") +
+    xlab("PCoA 1") + ylab("PCoA 2")
+  p
+  ggsave(file="output/unconstrained_envfit.pdf", width = 8, height = 5)
+
+```
+
+Does adding C fraction data explain more variation in endophyte composition? How much?
+```{r}
+
+xVars <- traits.tmp
+xVars %>%
+  select(-c(codeStem, code, size, species, barkthick, density)) %>%
+  filter(!is.na(waterperc)) -> envVars
+
+# remove communities with missing waterperc data
+mat.otu <- sub.comm.otu <- comm.otu[row.names(comm.otu) %in% envVars$codeStem,]
+dim(mat.otu)
+dim(envVars)
+# transform otu tab
+mat.otu.t<-decostand(mat.otu, 'hellinger')
+
+# extract the unconstrained and constrained mod
+ # unconstrained mod
+mod0 <- capscale(mat.otu.t ~ 1, data = envVars[,-1], distance='bray')
+  # constrained mod
+modfull <- capscale(mat.otu.t ~ ., data=envVars[,-1], distance='bray')
+
+# model selection
+modstep <- ordistep(mod0, scope=formula(modfull))
+  
+  # summary table for the best model
+  df <- data.frame(term=row.names(modstep$anova), modstep$anova)
+  df %>%
+    separate(term, into=c("drop","term")) %>%
+    select(-drop) %>%
+    rename('pval'=`Pr..F.`) -> df
+  df
+  write.csv(df, file = "output/constrained_bestmodelsummaryAllTraits.csv")
+
+
+
+
+
+```
+
 
 
